about page finished, contact page started

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <li><p><a href="index.html">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
                 <li><p class="active alt"><a href="about.html">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
+                <li><p><a href="contact.html">Contact</a></p></li>
             </ul> 
         </nav>
         <div id="nav-button-menu">
@@ -53,7 +53,7 @@
                 <li><p><a href="index.html">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
                 <li><p class="active"><a href="about.html">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
+                <li><p><a href="contact.html">Contact</a></p></li>
             </ul>
         </div>
         <div id="main" class="content">
@@ -85,21 +85,48 @@
             </div>
             <div id="opening-hours">
                 <h1>We are open! Possibly.</h1>
-                <div id="opening-hours-grid">
-                    <div class="grid-item">Monday</div>
-                    <div class="grid-item">12:00-21:00</div>
-                    <div class="grid-item">Tuesday</div>
-                    <div class="grid-item">12:00-21:00</div>
-                    <div class="grid-item">Wednesday</div>
-                    <div class="grid-item">12:00-21:00</div>
-                    <div class="grid-item">Thursday</div>
-                    <div class="grid-item">12:00-21:00</div>
-                    <div class="grid-item">Friday</div>
-                    <div class="grid-item">12:00-22:00</div>
-                    <div class="grid-item">Saturday</div>
-                    <div class="grid-item">12:00-22:00</div>
-                    <div class="grid-item">Sunday</div>
-                    <div class="grid-item">14:00-20:00</div>
+                <table>
+                    <tr>
+                    <th>Day</th>
+                    <th>Opening-hours</th>
+                    </tr>
+                    <tr>
+                    <td class="day">Monday</td>
+                    <td>12:00-21:00</td>
+                    </tr>
+                    <tr>
+                    <td class="day">Tuesday</td>
+                    <td>12:00-21:00</td>
+                    </tr>
+                    <tr>
+                        <td class="day">Wednesday</td>
+                        <td>12:00-21:00</td>
+                    </tr>
+                    <tr>
+                        <td class="day">Thursday</td>
+                        <td>12:00-21:00</td>
+                    </tr>
+                    <tr>
+                        <td class="day">Friday</td>
+                        <td>12:00-22:00</td>
+                    </tr>
+                    <tr>
+                        <td class="day">Saturday</td>
+                        <td>12:00-22:00</td>
+                    </tr>
+                    <tr>
+                        <td class="day">Sunday</td>
+                        <td>14:00-20:00</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="continue-prompt">
+                <h1>To get in touch, click below!</h1>
+                <span class="side-button-container">
+                    <a href="contact.html">
+                        <img class="button side" src="images-and-svgs\svgs\side-arrow.svg">
+                    </a>
+                </span>
             </div>
         </div>
     </main>
