--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><p class="active alt"><a href="#welcome-section">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
                 <li><p><a href="about.html">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
+                <li><p><a href="contact.html">Contact</a></p></li>
             </ul> 
         </nav>
         <div id="nav-button-menu">
@@ -48,7 +48,7 @@
                 <li><p class="active"><a href="#welcome-section">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
                 <li><p><a href="about.html">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
+                <li><p><a href="contact.html">Contact</a></p></li>
             </ul>
         </div>
         <div class="content" id="restaurant-info">
@@ -104,7 +104,6 @@
                     <img class="button side" src="images-and-svgs\svgs\side-arrow.svg">
                 </a>
             </span>
-
         </div>
     </main>
     <footer>
