--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                 <li><p class="alt"><a href="index.html">Home</a></p></li>
                 <li><p class="active"><a href="menu.html">Menu</a></p></li>
                 <li><p class="alt"><a href="about.html">About-us</a></p></li>
-                <li><p class="alt"><a href="welcome-section">Contact</a></p></li>
+                <li><p class="alt"><a href="contact.html">Contact</a></p></li>
             </ul> 
         </nav>
         <div id="nav-button-menu">
@@ -40,7 +40,7 @@
                 <li><p><a href="index.html">Home</a></p></li>
                 <li><p class="active"><a href="menu.html">Menu</a></p></li>
                 <li><p><a href="about.html">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
+                <li><p><a href="contact.html">Contact</a></p></li>
             </ul>
         </div>
         <div id="menu" class="content">
