contact page content

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
     <title>QuickBite</title>
 
-    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\logos\QuickBite-favicon.svg">
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -32,7 +32,7 @@
             </div>
         </div>
         <nav>
-            <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
