--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
 
     <title>QuickBite</title>
 
-    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\logos\QuickBite-favicon.svg">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;800&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
@@ -19,7 +20,7 @@
 <body>
     <main>
         <nav class="alt">
-            <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-gold-no-fill-whiteteeth.svg">
+            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-gold-no-fill-whiteteeth.svg">
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
@@ -43,19 +44,84 @@
                 <li><p class="active"><a href="contact.html">Contact</a></p></li>
             </ul>
         </div>
-        <div class="content" id="main">
-            <p>
-                Lorem ipsum dolor sit amet. Nam aspernatur galisum est dolores ducimus et eveniet incidunt ea perspiciatis illum. Sed consequatur eaque non blanditiis ratione est earum deleniti. Est repellat magnam in dicta asperiores id nobis quibusdam et voluptatem eligendi eos ipsa voluptatum eum omnis dolorem. </p><p>Eum quasi illo rem eius libero qui omnis consequuntur vel quidem esse qui dolore deleniti. Ut nostrum blanditiis et necessitatibus obcaecati ut deleniti ratione. </p><p>Ab voluptates tenetur nam expedita voluptatem et molestias voluptatibus qui adipisci rerum eos accusamus quidem est natus rerum. Est pariatur atque sed dolorem sint At autem illo quo odit eveniet vel quos consequuntur 33 similique minus. Et sint ipsa id rerum delectus id nemo asperiores. Qui sunt facilis est dolorum Quis est suscipit iste rem tenetur tempora ut voluptatem excepturi 33 sunt reiciendis quo soluta dolorem. </p><p>Aut incidunt ipsum id quia voluptatibus et sunt laborum qui rerum nisi quo numquam galisum qui autem quaerat qui laboriosam porro. Qui labore saepe quo facilis nemo a nostrum rerum vel velit fugit aut deserunt consequatur. Eum nobis dolor et Quis quod in quidem obcaecati vel accusantium quibusdam. </p><p>Et recusandae quia ut vitae assumenda ut tempore necessitatibus ut iure recusandae est repellat facere eos nulla odio et quia voluptatem. Et ullam accusamus non aliquam veritatis sit labore facere sit eveniet rerum et mollitia veritatis aut rerum dolor quo autem temporibus. Est temporibus sint qui sint atque ut error consequatur ex quae vero nam internos facilis. Qui sint eligendi sed deserunt aliquid est accusantium consequatur sit neque quos! </p>
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet. Nam aspernatur galisum est dolores ducimus et eveniet incidunt ea perspiciatis illum. Sed consequatur eaque non blanditiis ratione est earum deleniti. Est repellat magnam in dicta asperiores id nobis quibusdam et voluptatem eligendi eos ipsa voluptatum eum omnis dolorem. </p><p>Eum quasi illo rem eius libero qui omnis consequuntur vel quidem esse qui dolore deleniti. Ut nostrum blanditiis et necessitatibus obcaecati ut deleniti ratione. </p><p>Ab voluptates tenetur nam expedita voluptatem et molestias voluptatibus qui adipisci rerum eos accusamus quidem est natus rerum. Est pariatur atque sed dolorem sint At autem illo quo odit eveniet vel quos consequuntur 33 similique minus. Et sint ipsa id rerum delectus id nemo asperiores. Qui sunt facilis est dolorum Quis est suscipit iste rem tenetur tempora ut voluptatem excepturi 33 sunt reiciendis quo soluta dolorem. </p><p>Aut incidunt ipsum id quia voluptatibus et sunt laborum qui rerum nisi quo numquam galisum qui autem quaerat qui laboriosam porro. Qui labore saepe quo facilis nemo a nostrum rerum vel velit fugit aut deserunt consequatur. Eum nobis dolor et Quis quod in quidem obcaecati vel accusantium quibusdam. </p><p>Et recusandae quia ut vitae assumenda ut tempore necessitatibus ut iure recusandae est repellat facere eos nulla odio et quia voluptatem. Et ullam accusamus non aliquam veritatis sit labore facere sit eveniet rerum et mollitia veritatis aut rerum dolor quo autem temporibus. Est temporibus sint qui sint atque ut error consequatur ex quae vero nam internos facilis. Qui sint eligendi sed deserunt aliquid est accusantium consequatur sit neque quos! </p>
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet. Nam aspernatur galisum est dolores ducimus et eveniet incidunt ea perspiciatis illum. Sed consequatur eaque non blanditiis ratione est earum deleniti. Est repellat magnam in dicta asperiores id nobis quibusdam et voluptatem eligendi eos ipsa voluptatum eum omnis dolorem. </p><p>Eum quasi illo rem eius libero qui omnis consequuntur vel quidem esse qui dolore deleniti. Ut nostrum blanditiis et necessitatibus obcaecati ut deleniti ratione. </p><p>Ab voluptates tenetur nam expedita voluptatem et molestias voluptatibus qui adipisci rerum eos accusamus quidem est natus rerum. Est pariatur atque sed dolorem sint At autem illo quo odit eveniet vel quos consequuntur 33 similique minus. Et sint ipsa id rerum delectus id nemo asperiores. Qui sunt facilis est dolorum Quis est suscipit iste rem tenetur tempora ut voluptatem excepturi 33 sunt reiciendis quo soluta dolorem. </p><p>Aut incidunt ipsum id quia voluptatibus et sunt laborum qui rerum nisi quo numquam galisum qui autem quaerat qui laboriosam porro. Qui labore saepe quo facilis nemo a nostrum rerum vel velit fugit aut deserunt consequatur. Eum nobis dolor et Quis quod in quidem obcaecati vel accusantium quibusdam. </p><p>Et recusandae quia ut vitae assumenda ut tempore necessitatibus ut iure recusandae est repellat facere eos nulla odio et quia voluptatem. Et ullam accusamus non aliquam veritatis sit labore facere sit eveniet rerum et mollitia veritatis aut rerum dolor quo autem temporibus. Est temporibus sint qui sint atque ut error consequatur ex quae vero nam internos facilis. Qui sint eligendi sed deserunt aliquid est accusantium consequatur sit neque quos! </p>
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet. Nam aspernatur galisum est dolores ducimus et eveniet incidunt ea perspiciatis illum. Sed consequatur eaque non blanditiis ratione est earum deleniti. Est repellat magnam in dicta asperiores id nobis quibusdam et voluptatem eligendi eos ipsa voluptatum eum omnis dolorem. </p><p>Eum quasi illo rem eius libero qui omnis consequuntur vel quidem esse qui dolore deleniti. Ut nostrum blanditiis et necessitatibus obcaecati ut deleniti ratione. </p><p>Ab voluptates tenetur nam expedita voluptatem et molestias voluptatibus qui adipisci rerum eos accusamus quidem est natus rerum. Est pariatur atque sed dolorem sint At autem illo quo odit eveniet vel quos consequuntur 33 similique minus. Et sint ipsa id rerum delectus id nemo asperiores. Qui sunt facilis est dolorum Quis est suscipit iste rem tenetur tempora ut voluptatem excepturi 33 sunt reiciendis quo soluta dolorem. </p><p>Aut incidunt ipsum id quia voluptatibus et sunt laborum qui rerum nisi quo numquam galisum qui autem quaerat qui laboriosam porro. Qui labore saepe quo facilis nemo a nostrum rerum vel velit fugit aut deserunt consequatur. Eum nobis dolor et Quis quod in quidem obcaecati vel accusantium quibusdam. </p><p>Et recusandae quia ut vitae assumenda ut tempore necessitatibus ut iure recusandae est repellat facere eos nulla odio et quia voluptatem. Et ullam accusamus non aliquam veritatis sit labore facere sit eveniet rerum et mollitia veritatis aut rerum dolor quo autem temporibus. Est temporibus sint qui sint atque ut error consequatur ex quae vero nam internos facilis. Qui sint eligendi sed deserunt aliquid est accusantium consequatur sit neque quos! </p>
-            </p>
+        <div class="content non-menu alt" id="main">
+            <div id="project-explanation">
+                <h1>Okay, okay, I have a confession to make...</h1>
+                <h2>QuickBite isn't real!</h2>
+                <p>
+                    As you may or may not be aware, QuickBite isn't real. QuickBite is a concept for a website, which was created as a web-development project, to practice and showcase a static website using HTML, CSS and JavaScript.
+                </p>
+                <ul>
+                    <li id="basics">
+                        <h3>The Basics</h3>
+                        <p>The goal of this project was to use the basics of front-end development and to use them well.</p>
+                        <p>
+                            There is alot of HTML in this project and i have tried to format it as well as is possible. The indentation in the code is neat and tidy, the HTML itself is properly applied and the code is readable. A broad variety of html elements and techniques were used in this project, the menu page uses multiple heading types and nested unordered lists to create a complex yet easily readable menu. Grids and tables were also used.
+                        </p>
+                        <p>The CSS in this project is split across multiple files making it easy to maintain and make changes.</p>
+                        <p>The JavaScript is simple yet effective, it is used to create the parallax effect on the About-us page and to display the navigation menu on smaller screens.</p>
+                    </li>
+                    <li id="design">
+                        <h3>Design</h3>
+                        <p>
+                            I didn't want to build a generic restaurant, I wanted to create something that was a little less serious and explore designing a logo aswell. I downloaded Adobe Illustrator and designed multiple svgs to use as logos and learned alot in the process. The original svg I found online and purchased then i modified it in Illustrator untill I was happy to use the logo.
+                        </p>
+                        <div id="logo-grid">
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-big-no-fill.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-no-fill-whiteteeth.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-w-red-fill-whiteteeth.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-w-whitefill.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-w-gold-fill-whiteteeth.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-w-white-fill.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-no-fill-alt.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-no-fill.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-2.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-3.svg">
+                            </div>
+                            <div>
+                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
+                            </div>
+                        </div>
+                        <p>
+                            I had so much fun designing the logo, that I started looking for another challenge. I had some familiarity with parallax effects before this project but had never built one myself. I found an image I had taken back in 2020 of the local lake and decided it was exactly what I was looking for.
+                            I isolated the different aspects of the image by drawing paths in Adobe Illustrator, then I used an online tutorial to teach me what I needed to create the effect. Using JavaScript to identify the scroll position on the page and updating the position of each aspect of the image relative to that scroll postion. Below I have attached the original image.
+                        </p>
+                        <img id="lake-image" src="images-and-svgs\images\lake-image.jpg">
+                    </li>
+                    <li id="responsivity">
+                        <h3>Responsivity</h3>
+                        <p>The final goal of this project was to create a web-site that renders perfectly and looks the same on any screen-size with as little additional code as possible.
+                            To achieve this I explored using different measurement sizes in css combined with svgs for the logos and a couple of media queries to ensure everything looked right. I'm really happy with the end result, I've learned alot and now have the challenge of refactoring my other projects to bring them up to this level. 
+                        </p>
+                    </li>
+                </ul>   
+            <div id="contact-me">
+                <h1>So unfortunately there wont be any food...</h1>
+                <h2>But if you think this page looks preety good and would like to contact me or see some more things I'm working on, please check-out the content below.</h2>
+                <p>Insert contact data here.</p>
+            </div>
         </div>
     </main>
     <footer class="alt">
