--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>QuickBite</title>
 
-    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\logos\QuickBite-favicon.svg">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
 <body>
     <main>
         <div id="welcome-section" class="landing">
-            <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            <img id="hero-image" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
             <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
             <span class="down-button-container">
                 <a href="#logo-small">
@@ -27,7 +27,7 @@
             </span>
         </div>
         <nav>
-            <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
              <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
@@ -51,7 +51,7 @@
                 <li><p><a href="contact.html">Contact</a></p></li>
             </ul>
         </div>
-        <div class="content" id="restaurant-info">
+        <div class="content non-menu" id="restaurant-info">
             <h1>Here at <span class="logo-text">QuickBite</span> we do things a little differently...</h2>
             <ul>
                 <li>
