--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 
     <title>QuickBite</title>
 
-    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
+    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\logos\QuickBite-favicon.svg">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/menu.css">
@@ -19,7 +19,7 @@
 <body>
     <main>
         <nav class="alt">
-            <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-gold-no-fill-whiteteeth.svg">
+            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-gold-no-fill-whiteteeth.svg">
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
