Contact section content added

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             <ul id="nav-bar">
                 <li><p><a href="index.html">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
-                <li><p class="active alt"><a href="about.html">About-us</a></p></li>
+                <li><p class="active"><a href="about.html">About-us</a></p></li>
                 <li><p><a href="contact.html">Contact</a></p></li>
             </ul> 
         </nav>
@@ -88,7 +88,7 @@
                 <table>
                     <tr>
                     <th>Day</th>
-                    <th>Opening-hours</th>
+                    <th id="opening-hours-heading">Opening-hours</th>
                     </tr>
                     <tr>
                     <td class="day">Monday</td>
