--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\logos\QuickBite-favicon.svg">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +29,7 @@
                 <li><p class="alt"><a href="index.html">Home</a></p></li>
                 <li><p class="alt"><a href="menu.html">Menu</a></p></li>
                 <li><p class="alt"><a href="about.html">About-us</a></p></li>
-                <li><p class="active"><a href="contact.html">Contact</a></p></li>
+                <li><p class="active alt"><a href="contact.html">Contact</a></p></li>
             </ul> 
         </nav>
         <div id="nav-button-menu">
@@ -120,8 +119,28 @@
             <div id="contact-me">
                 <h1>So unfortunately there wont be any food...</h1>
                 <h2>But if you think this page looks preety good and would like to contact me or see some more things I'm working on, please check-out the content below.</h2>
-                <p>Insert contact data here.</p>
-            </div>
+                <ul id="contact-list">
+                    <li>
+                        <div><p>If you'd like to call me:</p></div>
+                        <div><p><a href="tel:+353862121580">+353862121580</a></p></div>
+                    </li>
+                    <li>
+                        <div><p>To email:</p></div>
+                        <div><p id="my-email">mikg25@gmail.com</p></div>
+                    </li>
+                    <li>
+                        <div>To view my github profile you can click ></div>
+                        <div>
+                            <a id="portfolio-link" href="https://www.github.com/MrGeorgiou">
+                                <img id="github-account" src="images-and-svgs\svgs\social-media\github-svgrepo-com.svg">
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>Or to view my portfolio you can click ></div>
+                        <div><a href="https://mrgeorgiou.github.io/My-Portfolio/">here!</a></div>
+                    </li>
+                </ul>
         </div>
     </main>
     <footer class="alt">
