--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
             </div>
             <ul id="nav-bar">
                 <li><p class="alt"><a href="index.html">Home</a></p></li>
-                <li><p class="active"><a href="menu.html">Menu</a></p></li>
+                <li><p class="active alt"><a href="menu.html">Menu</a></p></li>
                 <li><p class="alt"><a href="about.html">About-us</a></p></li>
                 <li><p class="alt"><a href="contact.html">Contact</a></p></li>
             </ul> 
