--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="nav-line"></div>
             </div>
             <ul id="nav-bar">
-                <li><p class="active alt"><a href="#welcome-section">Home</a></p></li>
+                <li><p class="active"><a href="#welcome-section">Home</a></p></li>
                 <li><p><a href="menu.html">Menu</a></p></li>
                 <li><p><a href="about.html">About-us</a></p></li>
                 <li><p><a href="contact.html">Contact</a></p></li>
