unsaved change added

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <li id="design">
                         <h3>Design</h3>
                         <p>
-                            I didn't want to build a generic restaurant, I wanted to create something that was a little less serious and explore designing a logo aswell. I downloaded Adobe Illustrator and designed multiple svgs to use as logos and learned alot in the process. The original svg I found online and purchased then i modified it in Illustrator untill I was happy to use the logo.
+                            I didn't want to build a generic restaurant, I wanted to create something abit more fun and explore designing a logo aswell. I downloaded Adobe Illustrator and designed multiple svgs to use as logos and learned alot in the process. The original svg I found online and purchased then i modified it in Illustrator untill I was happy to use the logo.
                         </p>
                         <div id="logo-grid">
                             <div>
