--- a/contact.html
+++ b/contact.html
@@ -48,77 +48,84 @@
                 <h1>Okay, okay, I have a confession to make...</h1>
                 <h2>QuickBite isn't real!</h2>
                 <p>
-                    As you may or may not be aware, QuickBite isn't real. QuickBite is a concept for a website, which was created as a web-development project, to practice and showcase a static website using HTML, CSS and JavaScript.
+                    As you may or may not be aware, QuickBite isn't real ("Wait, What?! This is the worst Birthday ever"). QuickBite is a concept for a restaurant, which was created as a web-development project, to practice building and showcase a static website using HTML, CSS and JavaScript.
                 </p>
                 <ul>
                     <li id="basics">
                         <h3>The Basics</h3>
                         <p>The goal of this project was to use the basics of front-end development and to use them well.</p>
                         <p>
-                            There is alot of HTML in this project and i have tried to format it as well as is possible. The indentation in the code is neat and tidy, the HTML itself is properly applied and the code is readable. A broad variety of html elements and techniques were used in this project, the menu page uses multiple heading types and nested unordered lists to create a complex yet easily readable menu. Grids and tables were also used.
+                            There is alot of HTML in this project. The indentation in the code is neat and tidy, the HTML itself is properly applied and the code is readable. A broad variety of html elements and techniques were used in this project, the menu page uses multiple heading types and nested unordered lists to create a complex yet easily readable menu. Grids and tables were also used through-out the various pages.
                         </p>
-                        <p>The CSS in this project is split across multiple files making it easy to maintain and make changes.</p>
-                        <p>The JavaScript is simple yet effective, it is used to create the parallax effect on the About-us page and to display the navigation menu on smaller screens.</p>
+                        <p>The CSS in this project is split across multiple files making it easier to maintain and make changes to.</p>
+                        <p>The images and svgs are subdivided to make them more managable.</p>
+                        <p>The JavaScript is simple yet effective, it is used to create the parallax effect on the About-us page, to display the navigation menu on smaller screens and to copy text to the clipboard at the end of this page.</p>
                     </li>
                     <li id="design">
                         <h3>Design</h3>
-                        <p>
-                            I didn't want to build a generic restaurant, I wanted to create something abit more fun and explore designing a logo aswell. I downloaded Adobe Illustrator and designed multiple svgs to use as logos and learned alot in the process. The original svg I found online and purchased then i modified it in Illustrator untill I was happy to use the logo.
-                        </p>
-                        <div id="logo-grid">
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-big-no-fill.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-no-fill-whiteteeth.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-w-red-fill-whiteteeth.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-w-whitefill.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-w-gold-fill-whiteteeth.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-w-white-fill.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-no-fill-alt.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-no-fill.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-2.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-3.svg">
-                            </div>
-                            <div>
-                                <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
-                            </div>
-                        </div>
-                        <p>
-                            I had so much fun designing the logo, that I started looking for another challenge. I had some familiarity with parallax effects before this project but had never built one myself. I found an image I had taken back in 2020 of the local lake and decided it was exactly what I was looking for.
-                            I isolated the different aspects of the image by drawing paths in Adobe Illustrator, then I used an online tutorial to teach me what I needed to create the effect. Using JavaScript to identify the scroll position on the page and updating the position of each aspect of the image relative to that scroll postion. Below I have attached the original image.
-                        </p>
-                        <img id="lake-image" src="images-and-svgs\images\lake-image.jpg">
+                        <ul>
+                            <li>
+                                <p>
+                                    I wanted to create an eye catching logo and have abit of fun making this page ("I'm still disappointed the <span class="logo-text alt">QuickBite</span> special isn't real"). The original svg used in the logo I found online and purchased then i modified it in Illustrator to create the logo. I designed multiple variations of the logo and learned alot in the process.
+                                </p>
+                                <div id="logo-grid">
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\Shark.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-big-no-fill.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-no-fill.svg">
+                                    </div>  
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+                                    </div> 
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-w-red-fill-whiteteeth.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-no-fill-whiteteeth.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-w-gold-fill-whiteteeth.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-gold-w-whitefill.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-red-w-white-fill.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-2.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-3.svg">
+                                    </div>
+                                    <div>
+                                        <img src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <p>
+                                    I had so much fun designing the logo, that I started looking for another challenge. I had some familiarity with parallax effects before this project but had never built one myself. I found an image I had taken back in 2020 of a lake in my area and decided it was exactly what I was looking for.
+                                    I isolated the different aspects of the image by drawing paths in Adobe Illustrator, then I used an online tutorial to show me how to create the effect. I used JavaScript to identify the scroll position on the page and updated the position of each aspect of the image relative to that scroll postion. Below I have attached the original image.
+                                </p>
+                                <img id="lake-image" src="images-and-svgs\images\lake-image.jpg">
+                            </li>
+                        </ul>
                     </li>
                     <li id="responsivity">
                         <h3>Responsivity</h3>
                         <p>The final goal of this project was to create a web-site that renders perfectly and looks the same on any screen-size with as little additional code as possible.
-                            To achieve this I explored using different measurement sizes in css combined with svgs for the logos and a couple of media queries to ensure everything looked right. I'm really happy with the end result, I've learned alot and now have the challenge of refactoring my other projects to bring them up to this level. 
+                            To achieve this I explored using different measurement types in css to change the way elements scaled, combined with svgs for the logos and a couple of media queries to tie up the loose ends. I'm really happy with the end result, I've learned alot and now have the challenge of refactoring my other projects to bring them up to this level. 
                         </p>
                     </li>
                 </ul>   
             <div id="contact-me">
-                <h1>So unfortunately there wont be any food...</h1>
-                <h2>But if you think this page looks preety good and would like to contact me or see some more things I'm working on, please check-out the content below.</h2>
+                <h1>So you're telling me there wont be any food?!</h1>
+                <h2>If you would like to contact me or see some more things I'm working on, please check-out the content below.</h2>
                 <ul id="contact-list">
                     <li>
                         <div><p>If you'd like to call me:</p></div>
