--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                     <p id="scroll-prompt">scroll</p>
                     </span>
                 </div>
-                <img class="parallax-item" id="background" src="images-and-svgs\images\lake-background-sky-alt.png"></div>
+                <!-- <img class="parallax-item" id="background" src="images-and-svgs\images\lake-background-sky-alt.png"></div> -->
                 <img class="parallax-item" id="middle" src="images-and-svgs/images/lake-middle-alt4.png">
                 <img class="parallax-item" id="foreground-2" src="images-and-svgs\images\lake-foreground-layer2-alt.png">
                 <img class="parallax-item" id="foreground" src="images-and-svgs\images\lake-foreground.png">
