JavaScript display page function

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;800&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
 
-    <script src="app.js" defer></script>
+    <script src="scripts/app.js" defer></script>
 </head>
 <body>
     <main>
@@ -133,7 +133,7 @@
                     </li>
                     <li>
                         <div><p>To email:</p></div>
-                        <div><p id="my-email">mikg25@gmail.com</p></div>
+                        <div><p id="email">mikg25@gmail.com</p></div>
                     </li>
                     <li>
                         <div>To view my github profile you can click ></div>
