--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;800&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
 
-    <script src="app.js" defer></script>
+    <script src=scripts/app.js" defer></script>
 </head>
 <body>
     <main>
