contact.html content added

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         </p>
                         <p>The CSS in this project is split across multiple files making it easier to maintain and make changes to.</p>
                         <p>The images and svgs are subdivided to make them more managable.</p>
-                        <p>The JavaScript is simple yet effective, it is used to create the parallax effect on the About-us page, to display the navigation menu on smaller screens and to copy text to the clipboard at the end of this page.</p>
+                        <p>The JavaScript is simple yet effective, it prevents the page content from displaying until loaded, it is used to create the parallax effect on the About-us page, to display the navigation menu on smaller screens and to copy text to the clipboard at the end of this page.</p>
                     </li>
                     <li id="design">
                         <h3>Design</h3>
