adding dropdowns to nav menu

--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
                 <p id="menu-description">Our Specially selected Menu, hand crafted to leave you satisfied. Combine any side, main and drink into a meal. <span class="price">Price: €10</span>.</p>
             </div>
             <ul id="menu-list">
-                <li class="menu-list-item">
+                <li id="sides" class="menu-list-item">
                     <div id="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
                         <h2>Sides</h2>
@@ -84,7 +84,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-list-item">
+                <li id="mains" class="menu-list-item">
                     <div id="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
                         <h2>Mains</h2>
@@ -157,7 +157,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-list-item">
+                <li id="specials" class="menu-list-item">
                     <div id="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\gift-svgrepo-com.svg">
                         <h2>Specials</h2>
@@ -188,7 +188,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-list-item">
+                <li id="drinks" class="menu-list-item">
                     <div id="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\drink-round-688-svgrepo-com.svg">
                         <h2>Drinks</h2>
@@ -214,7 +214,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-list-item">
+                <li id="desserts" class="menu-list-item">
                     <div id="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\cake-3-svgrepo-com.svg">
                         <h2>Desserts</h2>
@@ -240,7 +240,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-list-item">
+                <li id="sauces" class="menu-list-item">
                     <div id="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
                         <h2>Sauces</h2>
