Fixed menu drop-down

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,34 @@
             </div>
             <ul id="nav-bar">
                 <li><p class="alt"><a href="index.html">Home</a></p></li>
-                <li><p class="alt"><a href="menu.html">Menu</a></p></li>
+                <li>
+                    <div class="sub-menu-title-wrapper">
+                        <p>
+                            <a href="menu.html">Menu</a>    
+                        </p>
+                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                    </div>
+                    <ul class="sub-menu">
+                        <li>
+                            <p><a href="menu.html#sides">Sides</a></p>
+                        </li>
+                        <li>
+                            <p><a href="menu.html#mains">Mains</a></p>
+                        </li>
+                        <li>
+                            <p><a href="menu.html#specials">Specials</a></p>
+                        </li>
+                        <li>
+                            <p><a href="menu.html#drinks">Drinks</a></p>
+                        </li>
+                        <li>
+                            <p><a href="menu.html#desserts">Desserts</a></p>
+                        </li>
+                        <li>
+                            <p><a href="menu.html#sauces">Sauces</a></p>
+                        </li>
+                    </ul>
+                </li>
                 <li><p class="alt"><a href="about.html">About-us</a></p></li>
                 <li><p class="active alt"><a href="contact.html">Contact</a></p></li>
             </ul> 
